@@ -1,5 +1,5 @@
-var Request = require("./request"),
-    utils = require("./utils");
+var strftime = require("strftime").strftime,
+    Request = require("./request");
 
 /**
  * A middleware that logs the request to the given `stream` on its way out,
@@ -19,7 +19,7 @@ module.exports = function (app, stream) {
             var host = env.httpXForwardedFor || "-",
                 id = "-",
                 user = env.remoteUser || "-",
-                timestamp = "[" + utils.strftime(new Date, "%d/%b/%Y:%H:%M:%S %Z") + "]",
+                timestamp = "[" + strftime("%d/%b/%Y:%H:%M:%S %Z", new Date) + "]",
                 protoVersion = "HTTP/" + env.protocolVersion,
                 reqline = '"' + req.method + " " + req.fullPath + " " + protoVersion  + '"',
                 length = "-";
